# opengl-playground

./: .gitignore  CMakeLists.txt  README.md
include/: glpgApp.h  glpgArcball.h  glpgAssImpLoader.h  glpgBaseMeshLoader.h  glpgBaseMeshRenderer.h  glpgCompositeIndexdedMeshRenderer.h  glpgExt.h  glpgFirstPersonControl.h  glpgGeometry.h  glpgIMeshLoader.h  glpgIMeshRenderer.h  glpgMath.h  glpgPrimitives.h  glpgShader.h  glpgTextures.h
shaders/: simple.fragmentshader  simple.vertexshader
shaders/blinnphong/: blinnphong.frag
shaders/cell/: cell.frag  cell.vert
shaders/deferred/: lighting.frag  lighting.vert  render.frag  render.vert  viz.frag
shaders/depthpass/: depthpass.frag  depthpass.vert  depthviz.frag
shaders/envmapsampling/: envmapcube.frag  envmapequi.frag  pass.vert
shaders/envmapsphere/: envmapsphere.frag
shaders/imgprocessing/: fsquad.frag  fsquad.vert
shaders/lambert/: lambert.frag  lambert.vert
shaders/normalViz/: normal.frag  normal.geom  normal.vert
shaders/npr/: npr.frag  npr.vert
shaders/phong/: phong.frag  phong_shadowmap.frag  phong_shadowmap.vert
shaders/positionViz/: positionViz.frag  positionViz.vert
shaders/unlit/: pass.vert  unlit_color.frag  unlit_tex.frag  vol.frag  vol.vert
src/blinnPhongSpheres/: blinnPhongSpheres.cpp
src/blinnPhongTeapot/: blinnPhongTeapot.cpp
src/cellTeapot/: cellTeapot.cpp
src/deferredDragon/: deferredDragon.cpp
src/envMapSampling/: envMapSampling.cpp
src/firstPersonControls/: firstPersonControls.cpp
src/firstTriangle/: firstTriangle.cpp
src/geometryTest/: geometryTest.cpp
src/glpg/: glpgApp.cpp  glpgArcball.cpp  glpgAssImpLoader.cpp  glpgBaseMeshLoader.cpp  glpgBaseMeshRenderer.cpp  glpgCompositeIndexdedMeshRenderer.cpp  glpgExt.cpp  glpgFirstPersonControl.cpp  glpgShader.cpp  glpgTextures.cpp
src/helloApp/: helloApp.cpp
src/lambertCube/: lambertCube.cpp
src/lutColorCorrection/: README.md  lutColorCorrection.cpp
src/nprShading/: nprShading.cpp
src/packingStuff/: packingStuff.cpp
src/shadowTemples/: shadowTemples.cpp
src/textureCube/: textureCube.cpp
src/volumetricRenderingSlicing/: README.md  volumetricRenderingSlicing.cpp
textures/: cube_tex.dds  owl_normals.dds
textures/LUTs/: amaro_lut.tga  nashville_lut.tga
